@@ -1,3 +1,11 @@
+2004-04-23  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* plait.scm: Return false appropriately from the double-click
+	routine so undo/redo works correctly. Change the
+	"game-continuable" function to check the hint function. Make the
+	hint function also understand moving cards from the stock to the
+	tableau.
+
 2004-04-22  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* plait.scm: Added double-click support from Dean Copsey. Bug
